--- a/.github/ISSUE_TEMPLATE/00-Problem.yml
+++ b/.github/ISSUE_TEMPLATE/00-Problem.yml
@@ -3,16 +3,12 @@ description: Document a problem that you think needs solving for users of the we
 labels: ["problem"]
 body:
 
-  - type: markdown
-    attributes:
-      value: |
-        Thank you for proposing to chair a TPAC breakout session. Please ensure that the session is [in scope for a TPAC breakout](https://github.com/w3c/tpac-breakouts/wiki/Policies#session-scope) and review the [good practices for session chairs](https://github.com/w3c/tpac-breakouts/wiki/Good-Practices-for-Session-Chairs), which includes information about [how you can later update your session](https://github.com/w3c/tpac-breakouts/wiki/Good-Practices-for-Session-Chairs#how-to-update-a-session).
-
   - type: textarea
     id: description
     attributes:
       label: Describe the web problem you think needs solving
       description: |
+        Just one or two sentences is often sufficient.
         Simple markdown only please (inline formatting, links, lists).
     validations:
       required: true
@@ -22,6 +18,6 @@ body:
     attributes:
       label: Describe some use cases and requirements in detail
       description: |
-        A use case is a description of a user facing a problem for which we don’t yet have a good solution; in other words, a use case is an actual user wanting to do something. See [Sandboxed Filesystem use cases?](https://lists.w3.org/Archives/Public/public-webapps/2012JulSep/0835.html) for an example of how to describe use cases and requirements related to a specific problem.
+        A use case is a description of a user facing a problem for which we don’t yet have a good solution; that is, a use case is an actual user wanting to do something. See [Sandboxed Filesystem use cases?](https://lists.w3.org/Archives/Public/public-webapps/2012JulSep/0835.html) for an example of how to describe use cases and requirements related to a specific problem.
     validations:
       required: false
