No need for '#'

--- a/.github/workflows/charter-review.yml
+++ b/.github/workflows/charter-review.yml
@@ -17,7 +17,7 @@ jobs:
       run: |
         gh issue create \
           --repo "w3cping/privacy-request" \
-          --title " #${{ github.event.issue.title }}" \
+          --title "${{ github.event.issue.title }}" \
           --body "This issue was created because the 'horizontal review requested' label was added to\n\n ${{ github.event.issue.html_url }}" \
           --label "charter"
       env:
