--- a/.github/workflows/charter-review.yml
+++ b/.github/workflows/charter-review.yml
@@ -31,7 +31,7 @@ jobs:
           --label "charter"
       env:
         GITHUB_TOKEN: ${{ secrets.W3CBOT_TOKEN }}
-    - name: Create new issue in w3c/w3c/i18n-request
+    - name: Create new issue in w3c/i18n-request
       run: |
         gh issue create \
           --repo "w3c/i18n-request" \
