--- a/.github/workflows/charter-review.yml
+++ b/.github/workflows/charter-review.yml
@@ -45,10 +45,13 @@ jobs:
     steps:
     - name: create issue in ${{ h_repo }}
       run: |
+        echo "This issue was created because the 'horizontal review requested' label was added to ${{ github.event.issue.html_url }}" >> body.txt
+        echo "\nThis review is requested prior to the [Advisory Committee Review](https://www.w3.org/guide/process/charter.html#ac-review)." >> body.txt
+        echo "\n${{ github.event.issue.body }}" >> body.txt
         gh issue create \
           --repo "${{ h_repo }}" \
           --title "${{ github.event.issue.title }}" \
-          --body "This issue was created because the 'horizontal review requested' label was added to ${{ github.event.issue.html_url }}" \
+          --body-file body.txt
           --label "charter"
       env:
         GITHUB_TOKEN: ${{ secrets.W3CBOT_TOKEN }}
