--- a/.github/workflows/charter-review.yml
+++ b/.github/workflows/charter-review.yml
@@ -40,16 +40,20 @@ jobs:
 
     steps:
     - name: create issue in ${{ matrix.repo }}
+      env:
+        repo: ${{ matrix.repo }}
+        GITHUB_TOKEN: ${{ secrets.W3CBOT_TOKEN }}
       run: |
-        echo "This issue was created because the 'horizontal review requested' label was added to ${{ github.event.issue.html_url }}" >> body.txt
-        echo "" >> body.txt
-        echo "This review is requested prior to the [Advisory Committee Review](https://www.w3.org/guide/process/charter.html#ac-review)." >> body.txt
-        echo "" >> body.txt
-        echo "${{ github.event.issue.body }}" >> body.txt
+        cat << EOF > body.txt
+        This issue was created because the 'horizontal review requested' label was added to
+        § ${{ github.event.issue.html_url }}
+        
+        This review is requested prior to the [Advisory Committee Review](https://www.w3.org/guide/process/charter.html#ac-review).
+        
+        ${{ github.event.issue.body }}
+        EOF
         gh issue create \
-          --repo "${{ matrix.repo }}" \
+          --repo "$repo" \
           --title "${{ github.event.issue.title }}" \
           --body-file body.txt \
           --label "charter"
-      env:
-        GITHUB_TOKEN: ${{ secrets.W3CBOT_TOKEN }}
