Add AB in reviews, per https://github.com/w3c/strategy/issues/421

--- a/.github/workflows/charter-review.yml
+++ b/.github/workflows/charter-review.yml
@@ -22,8 +22,11 @@ jobs:
       - name: Retrieve common-labels.json
         id: extract
         run: |
+          # the list of horizontal repositories is hidden inside the definition of the horizontal labels
           curl --fail -o labels.json "https://w3c.github.io/common-labels.json"
-          REPOS=$(jq -c -r '[.[]."repo-request"] | map(select(.!=null)) | unique' labels.json)
+          # AB is per https://github.com/w3c/strategy/issues/421
+          ADDONS=',"w3c/AB-memberonly"'
+          REPOS=$(jq -c -r '[.[]."repo-request"] | map(select(.!=null)) | unique' labels.json | sed -s 's|\]|'"$ADDONS"']|')
           echo "repos=$REPOS" >> "$GITHUB_OUTPUT"
 
   create-issue:
